# ai-gym-diet-coach

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
apps/agents/: mps_agent.py  nutrition_agent.py  vision_agent.py
apps/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/dashboard/: MPSScore.tsx  MacroSummary.tsx  MicroStatus.tsx  RecentMeals.tsx
apps/frontend/src/components/layout/: MobileLayout.tsx
apps/frontend/src/lib/: api.ts  session.ts  supabase.ts
apps/frontend/src/pages/: CoachChat.tsx  Dashboard.tsx  LogMeal.tsx  Login.tsx  MealDetail.tsx  Profile.tsx  Signup.tsx  Splash.tsx
apps/mcp_server/: auth.py  config.py  main.py
apps/mcp_server/context/: database.py  models.py
apps/mcp_server/routes/: chat.py  meals.py  profile.py  summary.py
apps/mcp_server/schemas/: chat.py  meals.py  profile.py  summary.py
data/: usda_client.py
data/migrations/: add_body_weight_kg_to_user_profiles.sql  add_dish_name_to_meals.sql
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
tests/: test_mps_agent.py  test_nutrition_agent.py  test_vision_agent.py
workflows/: state.py
workflows/graphs/: meal_flow.py
